# placeholder_flask

./: .flaskenv  .pylintrc  README.md  pyproject.toml
app/: app.py  config.py  wsgi.py
app/static/img/: icon.svgz
placeholder_flask/: app.py
placeholder_flask/templates/: index.html
