[project]
name = "placeholder-flask"
version = "0.1.0"
description = "Placeholder flask app"
authors = [{ name = "arabidopsis", email = "ian.castleden@gmail.com" }]
requires-python = ">=3.11"
readme = "README.md"
license = "MIT"
dependencies = [
    "Flask>=3.0.2,<4",
    "python-dotenv>=1.0.1,<2",
]

[dependency-groups]
install = [
    "flask-nginx>=0.8.5,<0.9",
    "gunicorn>=21.2.0,<22",
]

[tool.uv]
default-groups = ["install"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
